--- a/src/components/Landing/DoYouLike.astro
+++ b/src/components/Landing/DoYouLike.astro
@@ -11,7 +11,7 @@ import Downarrow from "./Downarrow.astro"
             <div class="ChatbotText">
                 <div class="ChatbotP"> <p>Sí eres un@ <strong> joven entusiasmado✨ </strong>por el conocimiento continuo📗 puedes seguirnos en nuestra cuenta de Instagram como <a href="https://www.instagram.com/pelao.pro/" style=" color: rgb(24, 27, 206); font-weight: bold;">@pelao.pro</a>, para enterarte sobre todas las noticias respecto al programa🫢</p></div>
                 <p style="padding-top: 20px;">Pero también puedes visitar nuestro <strong>Chatbot😎</strong> para preguntar sobre diferentes oportunidades de becas, concursos, etc.</p>
-                <a href="/LLAC PROTOTYPE/chatbot.js" class="button">Chatbot</a>
+                <a href="https://pelaopro.vercel.app/chatbot" class="button">Chatbot</a>
             </div>
         </div> 
         <div class="Replicabilidad">
