--- a/src/components/Landing/NavBarWhite.astro
+++ b/src/components/Landing/NavBarWhite.astro
@@ -5,6 +5,7 @@
     <a href="https://pelaopro.vercel.app/" class="logo"><img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/LogoWhite.png" alt="Logo" loading="lazy"></a>
     <!-- Navbar links -->
     <ul class="navbar" id="navbar">
+        <li><a href="https://pelaopro.vercel.app/">Inicio</a></li>
            <li><a href="/nosotros">Nosotros</a></li>
            <li><a href="/replicabilidad">Replicabilidad</a></li>
            <li><a href="/chatbot">Chatbot</a></li>
@@ -74,7 +75,7 @@
     }
     .navbar a:hover {
         /*Styles*/
-        background-color: #d0ff0079;
+        background-color: #fcf804b0;
         text-decoration: none;
     }
     .x {
