--- a/src/components/Landing/Mandvcards.astro
+++ b/src/components/Landing/Mandvcards.astro
@@ -17,7 +17,7 @@ import Downarrow from "./Downarrow.astro";
             <h2>también lo puedes replicar!!!</h2>
             <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/nube_2.png" alt="C2" class="CloudTwo" loading="lazy">
             <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Butterfly_Red.png" alt="M1" class="MRed" loading="lazy">
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Emoji_Toggle.png" alt="toggle" class="Cursor" loading="lazy">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Emoji_Toggle.png" alt="toggle" class="Cursor" loading="lazy" style="z-index: 1000;">
         </div>
         
     
