Uptade Chatbot Navbar

--- a/src/components/Landing/NavBarWhite.astro
+++ b/src/components/Landing/NavBarWhite.astro
@@ -6,7 +6,7 @@
     <!-- Navbar links -->
     <ul class="navbar" id="navbar">
         <li><a href="https://pelaopro.vercel.app/">Inicio</a></li>
-           <li><a href="/nosotros">Nosotros</a></li>
+           <li><a href="https://lawebdelasalud.com/pelao-pro-jovenes-que-acercan-oportunidades-educativas-y-laborales-a-otros-jovenes/">Nosotros</a></li>
            <li><a href="/replicabilidad">Replicabilidad</a></li>
            <li><a href="/chatbot">Chatbot</a></li>
            <li><a href="/faqs">FAQ's</a></li>
