--- a/src/components/Landing/NavBar.astro
+++ b/src/components/Landing/NavBar.astro
@@ -7,13 +7,13 @@
     <a href="https://pelaopro.vercel.app/" class="logo"><img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Logo_Black.png" alt="Logo" loading="lazy"></a>
     <!-- Navbar links -->
     <ul class="navbar" id="navbar">
-           <li><a href="/nosotros">Nosotros</a></li>
-           <li><a href="/replicabilidad">Replicabilidad</a></li>
-           <li><a href="/chatbot">Chatbot</a></li>
-           <li><a href="/faqs">FAQ's</a></li>
-           <li><a href="/apoyanos" style="font-weight: bold;">Apóyanos</a></li>
+            <li><a href="https://lawebdelasalud.com/pelao-pro-jovenes-que-acercan-oportunidades-educativas-y-laborales-a-otros-jovenes/">Nosotros</a></li>
+            <li><a href="/replicabilidad">Replicabilidad</a></li>
+            <li><a href="/chatbot">Chatbot</a></li>
+            <li><a href="/faqs">FAQ's</a></li>
+            <li><a href="/apoyanos" style="font-weight: bold;">Apóyanos</a></li>
             <li><a href="#" class="x"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="m16.192 6.344-4.243 4.242-4.242-4.242-1.414 1.414L10.535 12l-4.242 4.242 1.414 1.414 4.242-4.242 4.243 4.242 1.414-1.414L13.364 12l4.242-4.242z"></path></svg></a></li>
-    </ul>
+        </ul>
     <!-- Menu Icon -->
     <div class="hamburger" id="menu-icon">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path></svg>
@@ -95,6 +95,7 @@
         header {
             padding: 14px 2%;
             transition: .2s;
+            z-index: 999;
         }
        
        .navbar a {
