--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -18,7 +18,21 @@ import NavBar from "../components/Landing/NavBar.astro";
 	</head>
 	<body>
 		<NavBar></NavBar>
-
+		<section class="Historia">
+			<div class="Main">
+				<div class="Pregunta">
+					<img src="" alt="I1" class="ImgOne" loading="lazy">
+				</div>
+				<div class="Imagenes">
+					<img src="" alt="I2" class="ImgTwo" loading="lazy">
+					<img src="" alt="I3" class="ImgThree" loading="lazy">
+				</div>
+				<div class="Parrafo">
+					<p>
+					</p>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
 <style>
