--- a/src/components/Landing/Footer.astro
+++ b/src/components/Landing/Footer.astro
@@ -2,7 +2,7 @@
   <div class="footer-container">
     <ul class="footer-links">
       <li><a href="https://pelaopro.vercel.app/">Inicio</a></li>
-      <li><a href="/nosotros">Nosotros</a></li>
+      <li><a href="https://lawebdelasalud.com/pelao-pro-jovenes-que-acercan-oportunidades-educativas-y-laborales-a-otros-jovenes/">Nosotros</a></li>
       <li><a href="/replicabilidad">Replicabilidad</a></li>
       <li><a href="/chatbot">Chatbot</a></li>
       <li><a href="/faqs">FAQ's</a></li>
