--- a/src/components/Landing/Firstgen.astro
+++ b/src/components/Landing/Firstgen.astro
@@ -12,7 +12,7 @@ import Downarrow from "./Downarrow.astro"
         <!-- .rightImg -->
         <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame3_Right.png" alt="right" class="rightImg" loading="lazy">
         <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Butterfly_White.png" alt="Butterfly" class="WhButterfly" loading="lazy">
-        <a href="/nosotros" class="button" style="z-index: 999;">Ver más</a>
+        <a href="https://www.instagram.com/stories/highlights/18036379112287251/" class="button" style="z-index: 999;">Ver más</a>
     </div>
 </div>
 <Downarrow></Downarrow>
