--- a/src/components/Landing/Nfirst.astro
+++ b/src/components/Landing/Nfirst.astro
@@ -4,20 +4,31 @@ import Downarrow from "./Downarrow.astro"
 <section class="Main" id="us">
 <div class="CardOne">
     <div class="Title">
-        <h1></h1>
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/N_Pregunta_Uno.png" loading="lazy" alt="Title" class="TitleOne">
     </div>
     <div class="paragraph">
-        <p></p>
+        <p>Pela'o Pro surge como respuesta a una problemática social crítica en Panamá: la falta de orientación adecuada para jóvenes recién graduados de secundaria, especialmente en comunidades vulnerables. Nace ante la realidad de que un solo orientador debe atender aproximadamente a quinientos estudiantes en muchas escuelas públicas, lo que hace imposible brindar guía personalizada. Este proyecto está diseñado específicamente para adolescentes de 16 a 18 años en situaciones de vulnerabilidad social, ofreciéndoles no solo información sobre oportunidades educativas y laborales, sino también acompañamiento emocional y un entorno seguro para desarrollar habilidades críticas para el mundo contemporáneo, cerrando así la brecha entre la educación formal y las demandas del mercado laboral actual.</p>
     </div>
 </div>
 <div class="CardTwo">
-    <img src="" alt="ImageOne" class="One" loading="lazy">
+    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/N_Image_One.png" alt="ImageOne" class="One" loading="lazy">
+    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/N_Image_w.png" alt="two" class="Two" loading="lazy">
+
 </div>
 </section>
 <Downarrow></Downarrow>
 <style>
     /*Normal*/
-
+    * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    position: relative;
+}
+.Main {
+    
+}
     /*Celular*/
     @media (max-width: 1080px) {
     }
