--- a/src/components/Landing/Mandvcards.astro
+++ b/src/components/Landing/Mandvcards.astro
@@ -13,7 +13,7 @@ import Downarrow from "./Downarrow.astro";
         <div class="Vcard">
             <h1>VISIÓN</h1>
             <p>Ser un modelo de impacto juvenil en Panamá, capaz de replicarse en colegios de todo el país para empoderar a estudiantes con propósito, liderazgo y acción.</p>
-            <a href="/apoyanos" class="button" style="z-index: 1000;">Apóyanos</a>
+            <a href="/replicabilidad" class="button" style="z-index: 1000;">Apóyanos</a>
             <h2>también lo puedes replicar!!!</h2>
             <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/nube_2.png" alt="C2" class="CloudTwo" loading="lazy">
             <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Butterfly_Red.png" alt="M1" class="MRed" loading="lazy">
