--- a/src/components/Landing/NavBar.astro
+++ b/src/components/Landing/NavBar.astro
@@ -7,10 +7,10 @@
     <a href="https://pelaopro.vercel.app/" class="logo"><img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Logo_Black.png" alt="Logo" loading="lazy"></a>
     <!-- Navbar links -->
     <ul class="navbar" id="navbar">
-            <li><a href="/nosotros">Nosotros</a></li>
+        <li><a href="https://pelaopro.vercel.app/">Inicio</a></li>
+            <li><a href="https://www.prensa.com/opinion/jovenes-construyendo-oportunidades-el-impacto-de-pelao-pro/">Nosotros</a></li>
             <li><a href="/replicabilidad">Replicabilidad</a></li>
             <li><a href="/chatbot">Chatbot</a></li>
-            <li><a href="/faqs">FAQ's</a></li>
             <li><a href="/apoyanos" style="font-weight: bold;">Apóyanos</a></li>
             <li><a href="#" class="x"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="m16.192 6.344-4.243 4.242-4.242-4.242-1.414 1.414L10.535 12l-4.242 4.242 1.414 1.414 4.242-4.242 4.243 4.242 1.414-1.414L13.364 12l4.242-4.242z"></path></svg></a></li>
         </ul>
