--- a/src/components/Landing/Who.astro
+++ b/src/components/Landing/Who.astro
@@ -24,7 +24,7 @@ import Downarrow from './Downarrow.astro';
     </div>
     <div class="content-container">
         <p class="parrafo">Pelao'Pro es un programa piloto que acompaña a los jóvenes en su camino hacia un futuro con más oportunidades, brindándoles herramientas para tomar decisiones informadas y acceder a las mejores opciones.</p>
-        <a href="https://pelaopro.vercel.app/" class="button">Descubre</a>
+        <a href="https://www.prensa.com/opinion/jovenes-construyendo-oportunidades-el-impacto-de-pelao-pro/" class="button">Descubre</a>
     </div>
 </div>
 <Downarrow></Downarrow>
