--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -1,5 +1,6 @@
 ---
 import NavBar from "../components/Landing/NavBar.astro";
+import Nfirst from "../components/Landing/Nfirst.astro";
 ---
 <html lang="en">
 	<head>
@@ -18,21 +19,7 @@ import NavBar from "../components/Landing/NavBar.astro";
 	</head>
 	<body>
 		<NavBar></NavBar>
-		<section class="Historia">
-			<div class="Main">
-				<div class="Pregunta">
-					<img src="" alt="I1" class="ImgOne" loading="lazy">
-				</div>
-				<div class="Imagenes">
-					<img src="" alt="I2" class="ImgTwo" loading="lazy">
-					<img src="" alt="I3" class="ImgThree" loading="lazy">
-				</div>
-				<div class="Parrafo">
-					<p>
-					</p>
-				</div>
-			</div>
-		</section>
+		<Nfirst></Nfirst>
 	</body>
 </html>
 <style>
