--- a/src/components/Landing/DoYouLike.astro
+++ b/src/components/Landing/DoYouLike.astro
@@ -17,7 +17,7 @@ import Downarrow from "./Downarrow.astro"
         <div class="Replicabilidad">
             <div class="RepiText">
                 <p>Sí eres un <strong>maestr@ </strong> 🧑‍🏫al cual le gusto el proyecto, adivina Pelao’Pro creo un programa de replicabilidad en el cual se te introducen todos los temas a tratar desde <strong>“cero” </strong>y con <strong>nuevas metodologías</strong> para aplicar en tu salón sin importar nada.</p>
-                <a href="/apoyanos" class="button" style="z-index: 1000;"  >Replicabilidad</a>
+                <a href="/replicabilidad" class="button" style="z-index: 1000;"  >Replicabilidad</a>
             </div>
         </div>
     </div>
@@ -26,7 +26,7 @@ import Downarrow from "./Downarrow.astro"
     
 </div>
 <Downarrow></Downarrow>
-<style>
+<style> 
     /* Normal */
 * {
     box-sizing: border-box;
