--- a/src/pages/replicabilidad.astro
+++ b/src/pages/replicabilidad.astro
@@ -23,7 +23,7 @@ import NavBarWhite from "../components/Landing/NavBarWhite.astro";
         <div class="Other">
             <div class="content-container">
                 <div class="Text">
-                    <h1 class="h1">//👷Creando el doc de replicabilidad volver a ver el 25 de mayo</h1>
+                    <h1 class="h1">//👷Creando el doc de replicabilidad... Volver a ver el 25 de mayo</h1>
                 </div>
                 <a href="https://pelaopro.vercel.app" class="button">Inicio</a>
             </div>
