--- a/src/components/Landing/Mandvcards.astro
+++ b/src/components/Landing/Mandvcards.astro
@@ -7,17 +7,16 @@ import Downarrow from "./Downarrow.astro";
         <div class="Mcard">
             <h1>MISIÓN</h1>
             <p>Empoderar a jóvenes con herramientas, experiencias y mentorías que impulsen su desarrollo profesional, personal y emprendedor.</p>
-            <a href="/nosotros" class="button" style="z-index: 999;">Trayectoría</a>
+            <a href="https://lawebdelasalud.com/pelao-pro-jovenes-que-acercan-oportunidades-educativas-y-laborales-a-otros-jovenes/" class="button" style="z-index: 999;">Trayectoría</a>
             <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/nube_1.png" alt="Nube1" class="CloudOne" loading="lazy">
         </div>
         <div class="Vcard">
             <h1>VISIÓN</h1>
             <p>Ser un modelo de impacto juvenil en Panamá, capaz de replicarse en colegios de todo el país para empoderar a estudiantes con propósito, liderazgo y acción.</p>
-            <a href="/apoyanos" class="button" style="z-index: 1000;">Apóyanos</a>
+            <a href="/replicabilidad" class="button" style="z-index: 1000;">Replicabilidad</a>
             <h2>también lo puedes replicar!!!</h2>
             <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/nube_2.png" alt="C2" class="CloudTwo" loading="lazy">
             <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Butterfly_Red.png" alt="M1" class="MRed" loading="lazy">
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Emoji_Toggle.png" alt="toggle" class="Cursor" loading="lazy" style="z-index: 998;">
         </div>
         
     
